Use interceptor approach instead of direct proxy